# EasySourceFlow

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: AGENT_INTEGRATION.md  ARCHITECTURE.md  BILIBILI_REGRESSION_SAMPLES.md  CONFIGURATION.md  DEPLOYMENT.md  MCP_API.md  OPERATIONS.md  RELEASE_CHECKLIST.md  REQUIREMENTS.md  ROADMAP.md  SECURITY_PRIVACY.md  TECHNICAL_DESIGN.md  TEST_PLAN.md  YOUTUBE_REGRESSION_SAMPLES.md  bilibili_regression_samples.json  youtube_regression_samples.json
docs/adr/: 0001-use-mcp-gateway.md  0002-local-daemon-and-mcp-adapter.md
docs/agents/: claude-code.md  codex.md  generic-mcp.md  openclaw.md
docs/channels/: feishu.md
scripts/: easysourceflow
skills/easysourceflow/: SKILL.md
skills/easysourceflow/evals/: evals.json
skills/easysourceflow/references/: feishu.md  tools.md
src/easysourceflow_core/: __init__.py  asr_quality.py  backup.py  bilibili_regression.py  cleanup.py  config.py  daemon.py  digest.py  documents.py  errors.py  health.py  http_api.py  macos_pdf_ocr.swift  maintenance.py  media_download.py  model_catalog.py  model_services.py  models.py  notifications.py  output.py  regression.py  service.py  store.py  url_utils.py  web_ui.py
src/easysourceflow_core/extractors/: video.py  web.py  wechat.py
src/easysourceflow_mcp/: __init__.py  server.py
tests/: test_core.py  test_http_and_mcp.py  test_model_catalog.py  test_repository_security.py  test_skill_contract.py  test_url_utils.py
tests/browser/: __init__.py  test_web_console.py
tests/fixtures/: bilibili_samples.json
