[project]
name = "easysourceflow"
dynamic = ["version"]
description = "EasySourceFlow service with an MCP adapter."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "EasySourceFlow contributors" }]
dependencies = ["beautifulsoup4>=4.12.0", "pypdf>=5.0.0", "yt-dlp[default]>=2026.7.4"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: MacOS X",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Text Processing :: Markup :: Markdown",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project.scripts]
easysourceflowd = "easysourceflow_core.daemon:main"
easysourceflow-mcp = "easysourceflow_mcp.server:main"
easysourceflow-check = "easysourceflow_core.health:main"
easysourceflow-clean = "easysourceflow_core.cleanup:main"
easysourceflow-maintenance = "easysourceflow_core.maintenance:main"
easysourceflow-regression = "easysourceflow_core.regression:main"

[project.optional-dependencies]
browser = ["playwright>=1.45.0"]
dev = ["pytest>=8.0.0", "ruff>=0.8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "easysourceflow_core.__version__" }

[tool.unittest]
start-dir = "tests"

[tool.ruff]
line-length = 140
target-version = "py310"
exclude = [".venv", "var", "backup"]

[tool.ruff.lint]
select = ["F"]
ignore = ["E501"]
